kalman for obstacles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set (HEADERS
     "include/street_environment/road.h"
 )
 
+set(OBJ_TRACKER "object_tracker")
 include_directories("include")
-add_library (street_environment SHARED ${SOURCES} ${HEADERS})
+include_directories("${OBJ_TRACKER}")
+file(GLOB tracker "${OBJ_TRACKER}/*.c" "${OBJ_TRACKER}/*.h")
+add_library (street_environment SHARED ${SOURCES} ${HEADERS} ${tracker})
 #target_link_libraries (street_environment PRIVATE lms)
