--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set (HEADERS
     "include/street_environment/obstacle.h"
     "include/street_environment/road.h"
     "include/street_environment/crossing.h"
+    "include/street_environment/trajectory.h"
+
 )
 
 include_directories("include" "codegen")
