lms 2.0 and conan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
+cmake_minimum_required(VERSION 2.8.12)
+
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
+
 set ( SOURCES 
     "src/street_environment.cpp"
     "src/dynamic_entity.cpp"
@@ -16,29 +21,25 @@ set (HEADERS
     "include/street_environment/pose.h"
 )
 
-#eigen
-include_directories(
-        include
-        /usr/local/include
-        /usr/include
-        /usr/local/include/eigen3
-        /usr/include/eigen3
-)
+#set compiler flags
+if((${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang") OR (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU"))
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wreturn-type -Wpedantic ")
+endif()
 
-add_definitions(-DEIGEN_NO_DEBUG)
+#add_definitions(-DEIGEN_NO_DEBUG)
 
 include_directories("include" "codegen")
 file(GLOB matlab "codegen/lib/objectTracker/*.cpp" "codegen/lib/objectTracker/*.h")
 message(${matlab})
 add_library (street_environment SHARED ${SOURCES} ${HEADERS} ${matlab})
-target_link_libraries (street_environment PRIVATE math_lib lmscore)
+target_link_libraries (street_environment PRIVATE ${CONAN_LIBS})
 
 
 set (TESTS
     "src/test/serialization.cpp"
 )
 
-if(USE_GOOGLETEST)
+if(USE_GOOGLETEST) #TODO
     message("Compile street_environment testing executable")
     add_executable(street_environment_test ${TESTS})
     target_link_libraries(street_environment_test PRIVATE street_environment math_lib gtest gtest_main lmscore)
