added cereal dependency -> not compiling anymore, cereal fails, TODO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,10 @@ target_link_libraries (street_environment PRIVATE ${CONAN_LIBS})
 
 set (TESTS
     "src/test/serialization.cpp"
+    "src/test/compiles.cpp"
 )
 
-if(USE_GOOGLETEST) #TODO
-    message("Compile street_environment testing executable")
-    add_executable(street_environment_test ${TESTS})
-    target_link_libraries(street_environment_test PRIVATE street_environment math_lib gtest gtest_main lmscore)
-    add_test(StreetEnvironment street_environment_test)
-endif()
+message("Compile street_environment testing executable")
+add_executable(street_environment_test ${TESTS})
+target_link_libraries(street_environment_test PRIVATE ${CONAN_LIBS})
+add_test(StreetEnvironment street_environment_test)
